--- a/public/api/conf/1.0/application.yaml
+++ b/public/api/conf/1.0/application.yaml
@@ -3,12 +3,12 @@ info:
   title: Bulk Data File List
   version: "1.0"
 servers:
-  - url: https://test-api.service.hmrc.gov.uk/bulk-data-download
+  - url: https://test-api.service.hmrc.gov.uk
     description: Sandbox
-  - url: https://api.service.hmrc.gov.uk/bulk-data-download
+  - url: https://api.service.hmrc.gov.uk
     description: Production
 paths:
-  /list/{fileType}:
+  /bulk-data-download/list/{fileType}:
     get:
       responses:
         "200":
@@ -16,7 +16,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/response"
+                type: array
+                items:
+                  $ref: "#/components/schemas/bulk-download"
               example:
                 - filename: file1.xml.gz
                   downloadURL: https://some.sdes.domain/file1.xml.gz
@@ -42,7 +44,7 @@ paths:
         description: A type of the information files to download e.g. `TARIFF-DAILY`, `TARIFF-MONTHLY`, `TARIFF-ANNUAL`.
 components:
   schemas:
-    response:
+    bulk-download:
         type: object
         properties:
           filename:
