SDESP-1161 Fix: remove extraneous key "scopes"
This reverts commit 30ef4a65a4d5935f75c495c23fa407f858e8f505.

--- a/public/api/conf/1.0/application.yaml
+++ b/public/api/conf/1.0/application.yaml
@@ -84,3 +84,4 @@ components:
       flows:
         clientCredentials:
           tokenUrl: https://api.service.hmrc.gov.uk/oauth/token
+          scopes: {}
